# lambda-rust-play

./: Cargo.toml  README.md  input.json
src/: main.rs
